--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>とりやまるはち</title>
+<title>トリヤマルハチのみんなへ</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;600&family=Noto+Sans+JP:wght@300;400&display=swap" rel="stylesheet">
 
@@ -168,52 +168,53 @@ canvas {
 <div class="intro">
     これまで一緒に過ごしてくれてありがとう。<br>
     それぞれの道へ進むみんなへ、<br>
+    マルハチに残るみんなへ。<br>
     少しだけ言葉を残しました。<br><br>
-    名前を選んでください。
+    名前を選んで、番号を入力してください。
 </div>
 
 <div class="name-grid">
-    <button onclick="openModal('itou.html','1111')">伊藤賢太</button>
+    <button onclick="openModal('ito.html','1812')">伊藤賢太</button>
     <!-- 6 -->
-    <button onclick="openModal('kuwahara.html','6')">桑原海人</button>
+    <button onclick="openModal('kuwahara.html','7717')">桑原海人</button>
 
     <!-- 5 -->
-    <button onclick="openModal('yokota.html','5')">横田悠悟</button>
-    <button onclick="openModal('sakamoto.html','5')">札本大</button>
+    <button onclick="openModal('yokota.html','7608')">横田悠悟</button>
+    <button onclick="openModal('sakamoto.html','1551')">札本大</button>
 
     <!-- 4 -->
-    <button onclick="openModal('osada.html','4')">長田青空</button>
-    <button onclick="openModal('horinoe.html','4')">堀ノ江樹</button>
-    <button onclick="openModal('watanabe.html','4')">渡辺羽南</button>
-    <button onclick="openModal('ise.html','4')">伊勢南美</button>
-    <button onclick="openModal('sakata.html','4')">坂田菜奈</button>
-    <button onclick="openModal('kaneda.html','4')">金田美紅</button>
-    <button onclick="openModal('okubo.html','4')">大久保明音</button>
+    <button onclick="openModal('osada.html','4798')">長田青空</button>
+    <button onclick="openModal('horinoe.html','1104')">堀ノ江樹</button>
+    <button onclick="openModal('watanabe.html','4182')">渡辺羽南</button>
+    <button onclick="openModal('ise.html','1131')">伊勢南美</button>
+    <button onclick="openModal('sakata.html','7700')">坂田菜奈</button>
+    <button onclick="openModal('kaneda.html','0822')">金田美紅</button>
+    <button onclick="openModal('okubo.html','3279')">大久保明音</button>
 
     <!-- 3 -->
-    <button onclick="openModal('nakazima.html','3')">中島望晴</button>
-    <button onclick="openModal('masunaga.html','3')">増永泰助</button>
-    <button onclick="openModal('kawaguti.html','3')">河口省吾</button>
-    <button onclick="openModal('nannri.html','3')">南里優菜</button>
-    <button onclick="openModal('nakamura.html','3')">中村藍</button>
-    <button onclick="openModal('setoguchi.html','3')">瀬戸口真那</button>
+    <button onclick="openModal('nakazima.html','4545')">中島望晴</button>
+    <button onclick="openModal('masunaga.html','0925')">増永泰助</button>
+    <button onclick="openModal('kawaguti.html','7185')">河口省吾</button>
+    <button onclick="openModal('nannri.html','3515')">南里優菜</button>
+    <button onclick="openModal('nakamura.html','4991')">中村藍</button>
+    <button onclick="openModal('setoguchi.html','5581')">瀬戸口真那</button>
 
     <!-- 2 -->
-    <button onclick="openModal('sakai.html','2')">境亜衣莉</button>
-    <button onclick="openModal('nosaki.html','2')">野崎麗</button>
-    <button onclick="openModal('himuro.html','2')">檜室圭輝</button>
-    <button onclick="openModal('tsuchida.html','2')">土田真司</button>
-    <button onclick="openModal('tagawa.html','2')">田川久和</button>
-    <button onclick="openModal('hashiguchi.html','2')">橋口義央</button>
-    <button onclick="openModal('fukui.html','2')">福井乃彩</button>
-    <button onclick="openModal('katabuchi.html','2')">片淵七虹</button>
+    <button onclick="openModal('sakai.html','0505')">境亜衣莉</button>
+    <button onclick="openModal('nosaki.html','3215')">野崎麗</button>
+    <button onclick="openModal('himuro.html','1652')">檜室圭輝</button>
+    <button onclick="openModal('tsuchida.html','8882')">土田真司</button>
+    <button onclick="openModal('tagawa.html','1231')">田川久和</button>
+    <button onclick="openModal('hashiguchi.html','5128')">橋口義央</button>
+    <button onclick="openModal('fukui.html','2222')">福井乃彩</button>
+    <button onclick="openModal('katafuchi.html','4100')">片淵七虹</button>
 
     <!-- 1 -->
-    <button onclick="openModal('fujimoto.html','1')">藤元菜々美</button>
-    <button onclick="openModal('yoshioka.html','1')">吉岡ゆつき</button>
-    <button onclick="openModal('matsuo.html','1')">松尾優樹</button>
-    <button onclick="openModal('miyahara.html','1')">宮原里恋</button>
-    <button onclick="openModal('kusano.html','1')">草野未祐</button>
+    <button onclick="openModal('fujimoto.html','2929')">藤元菜々美</button>
+    <button onclick="openModal('yoshioka.html','1110')">吉岡ゆつき</button>
+    <button onclick="openModal('matsuo.html','7864')">松尾優樹</button>
+    <button onclick="openModal('miyahara.html','3813')">宮原里恋</button>
+    <button onclick="openModal('kusano.html','6789')">草野未祐</button>
 
 </div>
 
