--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ canvas {
 
     <!-- 5 -->
     <button onclick="openModal('yokota.html','7608')">横田悠悟</button>
-    <button onclick="openModal('sakamoto.html','1551')">札本大</button>
+    <button onclick="openModal('hudamoto.html','1551')">札本大</button>
 
     <!-- 4 -->
     <button onclick="openModal('osada.html','4798')">長田青空</button>
